--- a/package.json
+++ b/package.json
@@ -41,5 +41,8 @@
     "typescript": "^5.4.5",
     "usehooks-ts": "^3.1.0",
     "yup": "^1.4.0"
+  },
+  "devDependencies": {
+    "@vitejs/plugin-basic-ssl": "^1.1.0"
   }
 }
